--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aos": "^2.3.4",
     "izimodal": "^1.5.1",
     "jquery": "^3.6.0",
     "swup": "^2.0.14"
